<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View android:layout_marginBottom="8dp" android:layout_marginTop="4dp" android:layout_height="0.4dp" android:background="@color/colorDivider" android:layout_width="fill_parent" />

    <RelativeLayout
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/text_inches"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/jog_inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:minWidth="48dp"
            android:minHeight="48dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.warkiz.widget.IndicatorStayLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.warkiz.widget.IndicatorSeekBar
                android:layout_height="wrap_content" android:layout_width="match_parent"
                app:isb_max="10" app:isb_min="0" app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle" app:isb_progress_value_float="true"
                app:isb_show_tick_texts="true" app:isb_ticks_count="2" app:isb_tick_texts_color="@color/colorPrimary" app:isb_track_progress_color="@color/colorAccent"
                app:isb_track_background_color="@color/colorDivider" app:isb_thumb_color="@color/colorAccent" app:isb_indicator_color="@color/colorAccent"
                app:isb_track_background_size="3dp" app:isb_track_progress_size="5dp"
                android:id="@+id/jog_xy_step_seek_bar" />

        </com.warkiz.widget.IndicatorStayLayout>

    </RelativeLayout>

    <TableLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_centerHorizontal="true"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ObsoleteLayoutParam">

        <TableRow tools:ignore="UselessParent">

            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/jog_xy_step_small"
                android:tag="@string/preference_jog_xy_step_small"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:text="XY: Small"
                tools:ignore="HardcodedText" />

            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/jog_xy_step_medium"
                android:tag="@string/preference_jog_xy_step_medium"
                android:layout_weight="0.3333"
                android:layout_width="0dp"
                android:text="XY: Medium"
                tools:ignore="HardcodedText" />

            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/jog_xy_step_high"
                android:tag="@string/preference_jog_xy_step_high"
                android:layout_weight="0.3333"
                android:layout_width="0dp"
                android:text="XY: Large"
                tools:ignore="HardcodedText" />

        </TableRow>

    </TableLayout>

    <View android:layout_margin="4dp" android:layout_height="0.2dp" android:background="@color/colorDivider" android:layout_width="fill_parent" />

    <RelativeLayout
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.warkiz.widget.IndicatorStayLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.warkiz.widget.IndicatorSeekBar
                android:layout_height="wrap_content" android:layout_width="match_parent"
                app:isb_max="10" app:isb_min="0" app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle" app:isb_progress_value_float="true"
                app:isb_show_tick_texts="true" app:isb_ticks_count="2" app:isb_tick_texts_color="@color/colorPrimary" app:isb_track_progress_color="@color/colorAccent"
                app:isb_track_background_color="@color/colorDivider" app:isb_thumb_color="@color/colorAccent" app:isb_indicator_color="@color/colorAccent"
                app:isb_track_background_size="3dp" app:isb_track_progress_size="5dp"
                android:id="@+id/jog_z_step_seek_bar" />

        </com.warkiz.widget.IndicatorStayLayout>

    </RelativeLayout>

    <TableLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_centerHorizontal="true"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ObsoleteLayoutParam">

        <TableRow tools:ignore="UselessParent">

            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/jog_z_step_small"
                android:tag="@string/preference_jog_z_step_small"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:text="Z: Small"
                tools:ignore="HardcodedText" />

            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/jog_z_step_medium"
                android:tag="@string/preference_jog_z_step_medium"
                android:layout_weight="0.3333"
                android:layout_width="0dp"
                android:text="Z: Medium"
                tools:ignore="HardcodedText" />

            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/jog_z_step_high"
                android:tag="@string/preference_jog_z_step_high"
                android:layout_weight="0.3333"
                android:layout_width="0dp"
                android:text="Z: Large"
                tools:ignore="HardcodedText" />

        </TableRow>

    </TableLayout>

    <View android:layout_margin="4dp" android:layout_height="0.2dp" android:background="@color/colorDivider" android:layout_width="fill_parent" />

    <RelativeLayout
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.warkiz.widget.IndicatorStayLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.warkiz.widget.IndicatorSeekBar
                android:layout_height="wrap_content" android:layout_width="match_parent"
                app:isb_max="2400" app:isb_min="0" app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_texts="true" app:isb_ticks_count="2" app:isb_tick_texts_color="@color/colorPrimary" app:isb_track_progress_color="@color/colorAccent"
                app:isb_track_background_color="@color/colorDivider" app:isb_thumb_color="@color/colorAccent" app:isb_indicator_color="@color/colorAccent"
                app:isb_track_background_size="3dp" app:isb_track_progress_size="5dp"
                android:id="@+id/jog_feed_seek_bar" />

        </com.warkiz.widget.IndicatorStayLayout>



    </RelativeLayout>

</LinearLayout>